--- a/app/views/layouts/_logged_in_footer.html.erb
+++ b/app/views/layouts/_logged_in_footer.html.erb
@@ -2,9 +2,9 @@
 	<div class="row">
 		<div class="col-xs-4" align="center">
 			<%=
-        link_to_unless_current image_tag("scorebook_clicked_32.png") +
-  			"<br/>Scorebook".html_safe, root_path,
-  			alt: "Scorebook", class: "img-responsive footer_active_link"
+        link_to_unless_current image_tag("games_clicked_32.png") +
+  			"<br/>Games".html_safe, games_path,
+  			alt: "Games", class: "img-responsive footer_active_link"
       %>
 		</div>
 		<div class="col-xs-4" align="center">
