--- a/app/views/layouts/_logged_in_footer.html.erb
+++ b/app/views/layouts/_logged_in_footer.html.erb
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-xs-4" align="center">
 			<%=
-        link_to_unless_current image_tag("games_clicked_32.png") +
+        link_to_unless_current image_tag("games_unclicked_32.png") +
   			"<br/>Games".html_safe, games_path,
   			alt: "Games", class: "img-responsive footer_active_link"
       %>
