WIP: updated Game to have counter (which was removed from Move) and working through bs testing errors.

--- a/app/views/shared/_game_errors.html.erb
+++ b/app/views/shared/_game_errors.html.erb
@@ -1,9 +1,8 @@
 <% if @game.errors.any? %>
   <div id="error_explanation">
     <h2>
-      Yikes! There are
-      <%= pluralize(@game.errors.count, "error") %>
-      you need to fix:
+      Yikes! Please fix
+      <%= pluralize(@game.errors.count, "error") %>:
     </h2>
     <ul>
       <% @game.errors.full_messages.each do |msg| %>
