--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -18,15 +18,19 @@
       </div>
       <div class="form-group">
         <%= f.label :color, class: "sr-only" %>
-        <%= f.text_field :color, class: "form-control", placeholder: "Color*: white or black" %>
+        <%= f.text_field :color, class: "form-control", placeholder: "Color* (white or black)" %>
       </div>
       <div class="form-group">
         <%= f.label :result, class: "sr-only" %>
-        <%= f.text_field :result, class: "form-control", placeholder: "Result*: won, lost, or drew" %>
+        <%= f.text_field :result, class: "form-control", placeholder: "Result* (won, lost, or drew)" %>
       </div>
       <div class="form-group">
         <%= f.label :day, class: "sr-only" %>
         <%= f.date_field :day, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :counter, class: "sr-only" %>
+        <%= f.number_field :counter, in: 1..100, class: "form-control", placeholder: "Number of Moves *" %>
       </div>
       <p>
         <%= f.submit "Submit", class: "btn btn-default form-control" %>
