--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -12,6 +12,7 @@
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 }
+$lighten: 23%;
 
 //**********
 //*
@@ -41,6 +42,39 @@ body {
 
 #no_games_container {
 	margin-top: 20em;
+}
+.result_container {
+	opacity: .6;
+}
+#result_won {
+	color: green;
+}
+#result_lost {
+	color: red;
+}
+#result_drew {
+	color: orange;
+}
+#result_won a {
+	color: green;
+}
+#result_won a:hover {
+	color: lighten(green, $lighten);
+	text-decoration: none;
+}
+#result_lost a {
+	color: red;
+}
+#result_lost a:hover {
+	color: lighten(red, $lighten);
+	text-decoration: none;
+}
+#result_drew a {
+	color: orange;
+}
+#result_drew a:hover {
+	color: lighten(orange, $lighten);
+	text-decoration: none;
 }
 
 //**********
