Updated game show page to display move numbers and updated feature test for viewing it.

--- a/app/views/games/_scoresheet.html.erb
+++ b/app/views/games/_scoresheet.html.erb
@@ -1,6 +1,6 @@
 <table class="table table-hover lead">
   <th>
-    #
+
   </th>
   <th>
     White
@@ -8,10 +8,10 @@
   <th>
     Black
   </th>
-  <% @game.moves.each do |move| %>
+  <% @game.moves.each_with_index do |move, num| %>
     <tr>
       <td>
-        <%= @game.next_move_number %>.
+        <%= num + 1 %>.
       </td>
       <td>
         <%= move.white %>
