--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -27,7 +27,7 @@
     against
     <%= @game.opponent_fname %>
     <%= @game.opponent_lname %>
-    on <%= @game.display_better_date %>:
+    on <%= @game.display_better_date %>,
     <% if @game.has_moves? %>
       in a game that lasted
       <%= @game.moves.count %>
