User can edit a game; added corresponding feature test.

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -46,4 +46,5 @@
     <% end %>
   </div>
   <%= render "moves/form" %>
+  <%= link_to "Edit Game", edit_game_path(@game), class: "btn btn-warning form-control" %>
 </div>
