--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -44,7 +44,7 @@
   </div>
   <%= render "moves/form" %>
   <%= link_to "Edit Game", edit_game_path(@game), class: "btn btn-warning form-control" %>
-  <%= link_to "Delete", game_path(@game),
+  <%= link_to "Delete Game", game_path(@game),
     class: "btn btn-small btn-danger form-control",
     # Why does this delete-alert pop up twice?
     method: :delete, data: { confirm: "Are you sure?" }
