User can now edit moves. DRYed a few views with partials and cleaned up test files with appropriate describe and scenario blocks.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -76,6 +76,14 @@ body {
 	color: lighten(orange, $lighten);
 	text-decoration: none;
 }
+table a {
+	color:#000;
+}
+table a:hover {
+	text-decoration: none;
+	color: #000;
+}
+
 
 //**********
 //*
