--- a/app/views/moves/edit.html.erb
+++ b/app/views/moves/edit.html.erb
@@ -1,10 +1,12 @@
+<% provide(:header, "Games") %>
+
 <div class="lead col-md-5 col-md-offset-4">
   <%= render "games/recap" %>
   <br/>
   <br/>
   <div class="well">
     <p class="lead">
-      Add Move
+      Edit Move
     </p>
     <%= render "moves/form" %>
   </div>
