--- a/app/views/games/_scoresheet.html.erb
+++ b/app/views/games/_scoresheet.html.erb
@@ -11,6 +11,10 @@
       <td><%= move.black %></td>
       <td>
         <%=
+          # "Edit" only temporary to make
+          # the tests pass. Not yet sure
+          # how to get HTML entities pass
+          # with Capybara.
           # link_to "&#10000;".html_safe,
           link_to "Edit",
           edit_game_move_path(@game, move),
