--- a/app/views/games/_scoresheet.html.erb
+++ b/app/views/games/_scoresheet.html.erb
@@ -21,7 +21,17 @@
           class: "blank_hover_link"
         %>
       </td>
-      <td>&#10006;</td>
+      <td>
+        <%=
+          # "Delete" only temporary to make
+          # the tests pass. Not yet sure
+          # how to get HTML entities pass
+          # with Capybara.
+          # link_to "&#10006;".html_safe,
+          link_to "Delete", game_move_path(@game, move),
+          method: :delete
+        %>
+      </td>
     </tr>
   <% end %>
 </table>
