--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,11 +4,7 @@
     <%= link_to "Sign Up for Free", signup_path, class: "btn btn-lg btn-default " %>
     <p>
       Already have an account?
-      <%= link_to "Log in.", "#" %>
+      <%= link_to "Log in", login_path %>.
     </p>
   </div>
-
-  <small>
-    Copyright 2015 Kuda
-  </small>
 </div>
