--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<% provide(:header, 'Sign Up') %>
+<% provide(:header, 'Edit Profile') %>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3 well">
@@ -14,7 +14,7 @@
       <%= f.label :password_confirmation, "Password Confirmation", class: "sr-only" %>
       <%= f.password_field :password_confirmation, class: "form-control", placeholder: "Password Confirmation *"  %>
 
-      <%= f.submit "Create my account", class: "btn btn-default" %>
+      <%= f.submit "Save changes", class: "btn btn-default" %>
     <% end %>
   </div>
 </div>
