--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,8 @@
 <% provide(:header, @user.username) %>
+
+<p>
+  <%= link_to "Edit My Info", edit_user_path(current_user), class: "btn btn-default form-control" %>
+</p>
+<p>
+  <%= link_to "Log out", logout_path, method: :delete, class: "btn btn-default form-control" %>
+</p>
