--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,15 @@
         <%= content_tag(:div, message, class: "alert alert-#{message_type} center") %>
       <% end %>
       <%= yield %>
-      <%= render "layouts/logged_in_footer" %>
+      <% if logged_in? %>
+        <%= render "layouts/logged_in_footer" %>
+      <% else %>
+      	<div class="center">
+      		<small>
+      			Copyright 2015 Kuda
+      		</small>
+      	</div>
+      <% end %>
       <%= debug(params) if Rails.env.development? %>
     </div>
   </body>
